--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <title>Carousel</title>
   </head>
   <body>
-    
+    <div class="carousel">
+      <div class="carousel-item carousel-item--visible">
+        <img src="assets/img/image1.png" />
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/image2.png" />
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/image3.png" />
+      </div>
+
+      <button aria-label="Previous Slide" class="prev"><</button>
+      <button aria-label="Next Slide" class="next">></button>
+    </div>
     <script src="./assets/js/app.js"></script>
   </body>
 </html>
